force-app/main/default/objects/Storefront_Collection__c/Storefront_Collection__c.object-meta.xml
<CustomObject>
    <label>Storefront Collection</label>
    <nameField>
        <label>Storefront Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storefront Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>