force-app/main/default/objects/Storefront_Collection__c/fields/Navigation_Icon__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Icon__c</fullName>
    <description>SLDS Icon for the Navigation Menu</description>
    <label>Navigation Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>