force-app/main/default/objects/Storefront_Collection__c/fields/Navigation_Name__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Name__c</fullName>
    <description>Name of the storefront collection that appears on the vertical navigation</description>
    <label>Navigation Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>