force-app/main/default/objects/Storefront_Collection__c/fields/Primary_Button_Icon__c.field-meta.xml
<CustomField>
    <fullName>Primary_Button_Icon__c</fullName>
    <description>SLDS icon name for primary button</description>
    <label>Primary Button Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>