force-app/main/default/objects/Storefront_Collection__c/fields/Primary_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Primary_Button_Label__c</fullName>
    <label>Primary Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>