force-app/main/default/objects/Storefront_Collection__c/fields/Primary_Button_Link__c.field-meta.xml
<CustomField>
    <fullName>Primary_Button_Link__c</fullName>
    <label>Primary Button Link</label>
    <type>Url</type>
</CustomField>