force-app/main/default/objects/Storefront_Collection__c/fields/Secondary_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Button_Label__c</fullName>
    <label>Secondary Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>