force-app/main/default/objects/Storefront_Collection__c/fields/Secondary_Button_Link__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Button_Link__c</fullName>
    <label>Secondary Button Link</label>
    <type>Url</type>
</CustomField>