force-app/main/default/objects/Storefront_Collection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order__c</columns>
    <columns>NAME</columns>
    <columns>Navigation_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>